# Tsyganator

./: .gitignore  BUILD.sh  CMakeLists.txt
.github/workflows/: build-windows.yml
Resources/Presets/Belgian/: 33 Tours de Force.tsyg  Boccaccio Sub Bomb.tsyg  Brouillard d'Anvers.tsyg  Bruges La Morte.tsyg  Chocolat Noir Seq.tsyg  Frites Acides.tsyg  Front 2-4-Biere.tsyg  Init Belgique.tsyg  Mentasm Hoover.tsyg  Nuclear Atomium.tsyg  Sound of C Bell.tsyg  Stomp des Ardennes.tsyg  Waffle Stab.tsyg
Resources/Presets/Italian/: Amore Sequencer.tsyg  Cappuccino Lead.tsyg  Colosseo Strings.tsyg  I Feel Moroder.tsyg  Init Italia.tsyg  Koto Visitors.tsyg  Lacrime di Synthwave.tsyg  Mama Mia Brass.tsyg  Nebbia di Milano.tsyg  Pasta al Basso.tsyg  Rimini Beach Arp.tsyg  Tramonto Romantico.tsyg  Vespa Scooter Funk.tsyg
Resources/Presets/User/: UserPreset.tsyg
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
Source/DSP/: Arpeggiator.h  JunoChorus.h  JunoEnvelope.h  JunoFilter.h  JunoLFO.h  JunoOscillator.h  JunoPresets.h  JunoVoice.h  SamplePlayer.h  StepSequencer.h  VintageProcessor.h
builds/Windows/Tsyganator v1.0 Windows/: LISEZ-MOI.md  README.md
builds/Windows/Tsyganator v1.0 Windows/Plugins/Tsyganator.vst3/Contents/Resources/: moduleinfo.json
builds/macOS/Tsyganator v1.0/: Installer Tsyganator.command  LISEZ-MOI.md  README.md
builds/macOS/Tsyganator v1.0/Plugins/Tsyganator.app/Contents/: Info.plist
builds/macOS/Tsyganator v1.0/Plugins/Tsyganator.component/Contents/: Info.plist
builds/macOS/Tsyganator v1.0/Plugins/Tsyganator.vst3/Contents/: Info.plist
builds/macOS/Tsyganator v1.0/Plugins/Tsyganator.vst3/Contents/Resources/: moduleinfo.json
builds/macOS/Tsyganator v1.0/Plugins/Tsyganator.vst3/Contents/_CodeSignature/: CodeResources
docs/: BUILD_MACOS.md  BUILD_WINDOWS.md
